--- a/site/templates/twig/customers/ci/.new/customer/sales-orders.twig
+++ b/site/templates/twig/customers/ci/.new/customer/sales-orders.twig
@@ -5,24 +5,20 @@
 	input                   ProcessWire\WireInput
 	page                    ProcessWire\Page
 	page.custid             Customer ID
-	customer                Customer
-	customer.contacts       Propel\Runtime\Util\PropelModelPager of Custinde
-	customer.salesOrders    Propel\Runtime\Util\PropelModelPager of SalesOrder
-	customer.salesHistory   Propel\Runtime\Util\PropelModelPager of Sales History
-	customer.quotes         Propel\Runtime\Util\PropelModelPager of Quote
+	orders                  Propel\Runtime\Util\PropelModelPager of SalesOrder
 #}
 <div class="card mb-4">
 	<div class="card-header d-flex justify-content-between bg-primary">
 		<a class="text-white" data-toggle="collapse" href="#customer-sales-orders" role="button" aria-expanded="false" aria-controls="customer-sales-orders">
 			Sales Orders <i class="fa fa-caret-down" aria-hidden="true"></i>
 		</a>
-		<span class="badge badge-pill badge-light">{{ customer.salesOrders.getNbResults() }}</span>
+		<span class="badge badge-pill badge-light">{{ orders.getNbResults() }}</span>
 	</div>
 	<div class="collapse" id="customer-sales-orders">
-		{% include 'sales-orders/customer/sales-order-list.twig' with {'orders': customer.salesOrders} %}
+		{% include 'sales-orders/customer/sales-order-list.twig'%}
 
 		<div class="card-footer">
-			<a href="{{ page.orderListUrl(customer.id) }}" class="link">
+			<a href="{{ page.orderListUrl(page.custid, input.get.text('shiptoID')) }}" class="link">
 				View More Sales Orders <i class="fa fa-sign-in" aria-hidden="true"></i>
 			</a>
 		</div>
