--- a/site/templates/twig/customers/ci/.new/ship-tos/ship-to/header.twig
+++ b/site/templates/twig/customers/ci/.new/ship-tos/ship-to/header.twig
@@ -1,9 +1,9 @@
 <div class="row mb-4">
 	<div class="col-sm-6">
 		<div class="mb-4">
-			{% include 'customers/ci/ship-tos/ship-to/info.twig' %}
+			{% include 'customers/ci/.new/ship-tos/ship-to/header/basic-info.twig' %}
 		</div>
-		{% include 'customers/ci/ship-tos/ship-to/ar-data.twig' %}
+		{% include 'customers/ci/.new/ship-tos/ship-to/header/ar-data.twig' %}
 	</div>
 	<div class="col-sm-6">
 		<div class="text-center form-group">
@@ -11,6 +11,6 @@
 				<i class="fa fa-shopping-cart" aria-hidden="true"></i> Order Entry
 			</a>
 		</div>
-		{% include 'customers/ci/ship-tos/ship-to/activity.twig' %}
+		{% include 'customers/ci/.new/ship-tos/ship-to/header/ar-activity.twig' %}
 	</div>
 </div>
