--- a/site/templates/twig/customers/ci/.new/ship-tos/ship-to/header/ar-activity.twig
+++ b/site/templates/twig/customers/ci/.new/ship-tos/ship-to/header/ar-activity.twig
@@ -1,9 +1,9 @@
 <div class="card">
 	<div class="card-header">
-		<span class="h5">Shipto Activity</span>
+		<span class="h5">Ship-to Activity</span>
 	</div>
 	<ul class="list-group list-group-flush">
-		<li class="list-group-item bg-success text-white">
+		<li class="list-group-item p-1 bg-success text-white">
 			<div class="row">
 				<div class="col-sm-6">
 					Last Sale Date
@@ -13,7 +13,7 @@
 				</div>
 			</div>
 		</li>
-		<li class="list-group-item">
+		<li class="list-group-item p-1">
 			<div class="row">
 				<div class="col-sm-6">
 					Sales Orders
@@ -23,7 +23,7 @@
 				</div>
 			</div>
 		</li>
-		<li class="list-group-item">
+		<li class="list-group-item p-1">
 			<div class="row">
 				<div class="col-sm-6">
 					Amount
@@ -33,7 +33,7 @@
 				</div>
 			</div>
 		</li>
-		<li class="list-group-item">
+		<li class="list-group-item p-1">
 			<div class="row">
 				<div class="col-sm-6">
 					Highest Balance
@@ -43,7 +43,7 @@
 				</div>
 			</div>
 		</li>
-		<li class="list-group-item">
+		<li class="list-group-item p-1">
 			<div class="row">
 				<div class="col-sm-6">
 					Current Finance Charge
@@ -53,8 +53,8 @@
 				</div>
 			</div>
 		</li>
-		<li class="list-group-item bg-light text-center"><span class="h5 font-weight-bold">Invoices</span></li>
-		<li class="list-group-item">
+		<li class="list-group-item p-1 bg-light text-center"><span class="h5 font-weight-bold">Invoices</span></li>
+		<li class="list-group-item p-1">
 			<div class="row font-weight-bold">
 				<div class="col-sm-5">
 					Period
@@ -67,7 +67,7 @@
 				</div>
 			</div>
 		</li>
-		<li class="list-group-item">
+		<li class="list-group-item p-1">
 			<div class="row">
 				<div class="col-sm-5">
 					<abbr title="{{ "now"|date("F Y") }}">Month-to-date</abbr>
@@ -80,7 +80,7 @@
 				</div>
 			</div>
 		</li>
-		<li class="list-group-item">
+		<li class="list-group-item p-1">
 			<div class="row">
 				<div class="col-sm-5">
 					<abbr title="{{ "now"|date("Y") }}">Year-to-date</abbr>
@@ -93,7 +93,7 @@
 				</div>
 			</div>
 		</li>
-		<li class="list-group-item">
+		<li class="list-group-item p-1">
 			<div class="row">
 				<div class="col-sm-5">
 					Last 12 Months
