--- a/site/templates/twig/customers/ci/.new/ship-tos/ship-to/header/ar-data.twig
+++ b/site/templates/twig/customers/ci/.new/ship-tos/ship-to/header/ar-data.twig
@@ -3,9 +3,9 @@
 		<span class="h5">AR</span>
 	</div>
 	<ul class="list-group list-group-flush">
-		<li class="list-group-item">
+		<li class="list-group-item p-1">
 			<div class="row">
-				<div class="col-sm-10">
+				<div class="col-sm-10 text-bold">
 					Warehouse:
 				</div>
 				<div class="col-sm-2">
@@ -13,9 +13,9 @@
 				</div>
 			</div>
 		</li>
-		<li class="list-group-item">
+		<li class="list-group-item p-1">
 			<div class="row">
-				<div class="col-sm-10">
+				<div class="col-sm-10 text-bold">
 					Ship Via:
 				</div>
 				<div class="col-sm-2">
@@ -23,9 +23,9 @@
 				</div>
 			</div>
 		</li>
-		<li class="list-group-item">
+		<li class="list-group-item p-1">
 			<div class="row">
-				<div class="col-sm-10">
+				<div class="col-sm-10 text-bold">
 					Current Finance Charge:
 				</div>
 				<div class="col-sm-2">
@@ -33,9 +33,9 @@
 				</div>
 			</div>
 		</li>
-		<li class="list-group-item">
+		<li class="list-group-item p-1">
 			<div class="row">
-				<div class="col-sm-10">
+				<div class="col-sm-10 text-bold">
 					Type:
 				</div>
 				<div class="col-sm-2">
@@ -43,9 +43,9 @@
 				</div>
 			</div>
 		</li>
-		<li class="list-group-item">
+		<li class="list-group-item p-1">
 			<div class="row">
-				<div class="col-sm-10">
+				<div class="col-sm-10 text-bold">
 					Price Code:
 				</div>
 				<div class="col-sm-2">
@@ -53,9 +53,9 @@
 				</div>
 			</div>
 		</li>
-		<li class="list-group-item">
+		<li class="list-group-item p-1">
 			<div class="row">
-				<div class="col-sm-10">
+				<div class="col-sm-10 text-bold">
 					Credit Hold:
 				</div>
 				<div class="col-sm-2">
@@ -63,9 +63,9 @@
 				</div>
 			</div>
 		</li>
-		<li class="list-group-item">
+		<li class="list-group-item p-1">
 			<div class="row">
-				<div class="col-sm-10">
+				<div class="col-sm-10 text-bold">
 					Tax Exempt:
 				</div>
 				<div class="col-sm-2">
