--- a/site/templates/twig/customers/ci/.new/ship-tos/ship-to/toolbar.twig
+++ b/site/templates/twig/customers/ci/.new/ship-tos/ship-to/toolbar.twig
@@ -1,7 +1,7 @@
 <nav class="toolbar-sidebar">
 	<ul class="nav">
 		<li>
-			<a href="{{ page.ciContactsUrl(shipto.custid, shipto.shiptoid) }}">
+			<a href="{{ page.ciContactsUrl(customer.rid, shipto.shiptoid) }}">
 				Contacts
 			</a>
 		</li>
