--- a/site/templates/twig/customers/ci/.new/customer/contacts.twig
+++ b/site/templates/twig/customers/ci/.new/customer/contacts.twig
@@ -1,13 +1,16 @@
 {#
-	var                    Description / Instance of
+	var / var property      Description / Instance of
 	-------------------------------------------------
-	page                   ProcessWire\Page
-	contacts               Propel\Runtime\Util\PropelModelPager
+	user                    ProcessWire\User
+	input                   ProcessWire\WireInput
+	page                    ProcessWire\Page
+	page.custid             Customer ID
+	customer.contacts       Propel\Runtime\Util\PropelModelPager of Custindex
 #}
 <div class="card mb-4">
 	<div class="card-header d-flex justify-content-between bg-primary">
 		<a class="text-white" data-toggle="collapse" href="#customer-contacts" role="button" aria-expanded="false" aria-controls="customer-contacts">
-			Contacts&ensp;<i class="fa fa-caret-down" aria-hidden="true"></i>
+			Contacts <i class="fa fa-caret-down" aria-hidden="true"></i>
 		</a>
 		<span class="badge badge-pill badge-light">{{ contacts.getNbResults() }}</span>
 	</div>
@@ -22,8 +25,8 @@
 				<div class="col text-right">Edit</div>
 			</div>
 		</div>
-		{% if customer.contacts.count > 0 %}
-			{% for contact in customer.contacts %}
+		{% if contacts.count > 0 %}
+			{% for contact in contacts %}
 				<div class="list-group-item py-1 px-2">
 					<div class="row">
 						<div class="col"><a href="{{ page.ciContactUrl(input.get.int('rid'), contact.shiptoid, contact.contact) }}" class="link">{{ contact.contact }}</a></div>
@@ -47,7 +50,7 @@
 			</div>
 		{% endif %}
 		<div class="card-footer">
-			<a href="{{ page.ciContactsUrl(input.get.int('rid'))}}" class="link">
+			<a href="{{ page.ciContactsUrl(input.get.int('rid'), input.get.text('shiptoID'))}}" class="link">
 				View More Contacts <i class="fa fa-sign-in" aria-hidden="true"></i>
 			</a>
 		</div>
