--- a/site/templates/twig/customers/ci/.new/customer/quotes.twig
+++ b/site/templates/twig/customers/ci/.new/customer/quotes.twig
@@ -5,24 +5,20 @@
 	input                   ProcessWire\WireInput
 	page                    ProcessWire\Page
 	page.custid             Customer ID
-	customer                Customer
-	customer.contacts       Propel\Runtime\Util\PropelModelPager of Custinde
-	customer.salesOrders    Propel\Runtime\Util\PropelModelPager of SalesOrder
-	customer.salesHistory   Propel\Runtime\Util\PropelModelPager of Sales History
-	customer.quotes         Propel\Runtime\Util\PropelModelPager of Quote
+	quotes         Propel\Runtime\Util\PropelModelPager of Quote
 #}
 <div class="card mb-4">
 	<div class="card-header d-flex justify-content-between bg-primary">
 		<a class="text-white" data-toggle="collapse" href="#customer-quotes" role="button" aria-expanded="false" aria-controls="customer-quotes">
 			Quotes <i class="fa fa-caret-down" aria-hidden="true"></i>
 		</a>
-		<span class="badge badge-pill badge-light">{{ customer.quotes.getNbResults() }}</span>
+		<span class="badge badge-pill badge-light">{{ quotes.getNbResults() }}</span>
 	</div>
 	<div class="collapse" id="customer-quotes">
-		{% include 'quotes/customer/quotes-list.twig' with {'quotes': customer.quotes} %}
+		{% include 'quotes/customer/quotes-list.twig' %}
 
 		<div class="card-footer">
-			<a href="{{ page.quoteListUrl(input.get.string('custID')) }}" class="link">
+			<a href="{{ page.quoteListUrl(page.custid, input.get.text('shiptoID')) }}" class="link">
 				View More Quotes
 				<i class="fa fa-sign-in" aria-hidden="true"></i>
 			</a>
