--- a/site/templates/twig/customers/ci/.new/ship-tos/ship-to/header/basic-info.twig
+++ b/site/templates/twig/customers/ci/.new/ship-tos/ship-to/header/basic-info.twig
@@ -1,13 +1,13 @@
-<div class="card border-info">
-	<div class="card-header bg-info">
-		<span class="h3 text-white">{{ shipto.name }} Information</span>
+<div class="card border-light">
+	<div class="card-header bg-light">
+		<span class="h5">{{ shipto.name }} Information</span>
 	</div>
-	<table class="table">
+	<table class="table table-sm">
 		<tr>
 			<td class="font-weight-bold">Customer:</td>
 			<td>
-				{{ shipto.customerid }} <br>
-				{{ shipto.customername }}
+				{{ customer.id }} <br>
+				{{ customer.name }}
 			</td>
 		</tr>
 		<tr>
