--- a/site/templates/twig/customers/ci/.new/contacts/contacts/shipto-contact.twig
+++ b/site/templates/twig/customers/ci/.new/contacts/contacts/shipto-contact.twig
@@ -14,10 +14,10 @@
 			<table class="table table-striped table-sm">
 				{% for key, column in json['columns']['shipto']['shiptoleft'] %}
 					<tr>
-						<td class="{{ module_json.get_justifyclass(column['headingjustify']) }}">
+						<td class="{{ jsonm.get_justifyclass(column['headingjustify']) }}">
 							<strong>{{ column['heading']}}</strong>
 						</td>
-						<td class="{{ module_json.get_justifyclass(column['datajustify']) }}">
+						<td class="{{ jsonm.get_justifyclass(column['datajustify']) }}">
 							{{ shipto['shiptoleft'][key]|stripslashes }}
 						</td>
 					</tr>
@@ -28,10 +28,10 @@
 			<table class="table table-striped table-sm">
 				{% for key, column in json['columns']['shipto']['shiptoright'] %}
 					<tr>
-						<td class="{{ module_json.get_justifyclass(column['headingjustify']) }}">
+						<td class="{{ jsonm.get_justifyclass(column['headingjustify']) }}">
 							<strong>{{ column['heading']}}</strong>
 						</td>
-						<td class="{{ module_json.get_justifyclass(column['datajustify']) }}">
+						<td class="{{ jsonm.get_justifyclass(column['datajustify']) }}">
 							{{ shipto['shiptoright'][key]|stripslashes }}
 						</td>
 					</tr>
