FIX: add bread-crumbs

--- a/site/templates/twig/customers/ci/.new/pricing/select-item/display.twig
+++ b/site/templates/twig/customers/ci/.new/pricing/select-item/display.twig
@@ -1,3 +1,5 @@
+{% include 'customers/ci/.new/bread-crumbs.twig' %}
+
 <div class="row">
 	<div class="col-sm-4">
 		{% include 'customers/ci/.new/pricing/select-item/form.twig' %}
