--- a/site/templates/twig/customers/ci/.new/sales-orders/table/tr-detail-itemstatus.twig
+++ b/site/templates/twig/customers/ci/.new/sales-orders/table/tr-detail-itemstatus.twig
@@ -7,8 +7,8 @@
 				{% if blueprint['itemstatus']['rows'][x]['columns'][i] %}
 					{% set column = blueprint['itemstatus']['rows'][x]['columns'][i] %}
 					{% set colspan = column['col-length'] %}
-					<td colspan="{{ colspan }}" class="{{ module_formatter.get_justifyclass(column['data-justify']) }}">
-						<span class="font-weight-bold">{{ column['label'] }}:</span> {{ module_formatter.format_celldata(detail['itemstatus'], column) }}
+					<td colspan="{{ colspan }}" class="{{ formatter.get_justifyclass(column['data-justify']) }}">
+						<span class="font-weight-bold">{{ column['label'] }}:</span> {{ formatter.format_celldata(detail['itemstatus'], column) }}
 					</td>
 				{% else %}
 					{% if columncount < blueprint['cols'] %}
