--- a/site/templates/twig/customers/ci/.new/sales-orders/table/tr-totals.twig
+++ b/site/templates/twig/customers/ci/.new/sales-orders/table/tr-totals.twig
@@ -6,9 +6,9 @@
 			{% if blueprint['total']['rows'][x]['columns'][i] %}
 				{% set column = blueprint['total']['rows'][x]['columns'][i] %}
 				{% set colspan = column['col-length'] %}
-				<td colspan="{{ colspan }}" class="{{ module_formatter.get_justifyclass(column['data-justify']) }}">
+				<td colspan="{{ colspan }}" class="{{ formatter.get_justifyclass(column['data-justify']) }}">
 					<span class="font-weight-bold">{{ column['label'] }}:</span>
-					{{ module_formatter.format_celldata(order['totals'], column) }}
+					{{ formatter.format_celldata(order['totals'], column) }}
 				</td>
 			{% else %}
 				{% if columncount < blueprint['cols'] %}
