--- a/site/templates/twig/customers/ci/.new/sales-history/display.twig
+++ b/site/templates/twig/customers/ci/.new/sales-history/display.twig
@@ -1,9 +1,7 @@
-{% extends 'customers/ci/display.twig' %}
-
-{% set module_formatter = formatter %}
+{% extends 'customers/ci/.new/display.twig' %}
 
 {% block body %}
-	{% include 'customers/ci/sales-history/sales-history.twig' %}
+	{% include 'customers/ci/.new/sales-history/sales-history.twig' %}
 {% endblock %}
 
 {% block footer %}
@@ -11,7 +9,7 @@
 		<div class="d-flex justify-content-between align-items-center">
 			<div></div>
 			<div></div>
-			<a href="{{ page.ciUrl(customer.id) }}" class="btn btn-warning btn-sm">
+			<a href="{{ page.ciUrl(customer.rid) }}" class="btn btn-warning btn-sm">
 				<i class="fa fa-times" aria-hidden="true"></i> Close
 			</a>
 		</div>
