--- a/site/templates/twig/customers/ci/.new/sales-history/table/tr-totals.twig
+++ b/site/templates/twig/customers/ci/.new/sales-history/table/tr-totals.twig
@@ -6,11 +6,11 @@
 			{% if blueprint['total']['rows'][x]['columns'][i] %}
 				{% set column = blueprint['total']['rows'][x]['columns'][i] %}
 				{% set colspan = column['col-length'] %}
-				<td colspan="{{ colspan }}" class="{{ module_formatter.get_justifyclass(column['data-justify']) }}">
+				<td colspan="{{ colspan }}" class="{{ formatter.get_justifyclass(column['data-justify']) }}">
 					<span class="font-weight-bold">
 						{{ column['label'] }}{{ column['label']|length ? ':' : '' }}
 					</span>
-					{{ module_formatter.format_celldata(invoice['totals'], column) }}
+					{{ formatter.format_celldata(invoice['totals'], column) }}
 				</td>
 			{% else %}
 				{% if columncount < blueprint['cols'] %}
