Update Ci\PurchaseOrders to use rid

--- a/site/templates/twig/customers/ci/.new/purchase-orders/init/display.twig
+++ b/site/templates/twig/customers/ci/.new/purchase-orders/init/display.twig
@@ -1,7 +1,9 @@
+{% include 'customers/ci/.new/bread-crumbs.twig' %}
+
 <div class="row">
 	<div class="col-sm-6">
-		<form action="{{ input.url() }}" method="get" class="allow-enterkey-submit">
-			<input type="hidden" name="custID" value="{{ input.get.string('custID') }}">
+		<form action="{{ input.url() }}" method="GET" class="allow-enterkey-submit">
+			<input type="hidden" name="rid" value="{{ input.get.int('rid') }}">
 			<div class="form-group">
 				<label for="custpo">Cust PO #</label>
 				<input class="form-control form-group inline" type="text" name="custpo" id="custpo" placeholder="Customer PO #" autofocus>
