--- a/site/templates/twig/customers/ci/.new/credit/credit.twig
+++ b/site/templates/twig/customers/ci/.new/credit/credit.twig
@@ -1,3 +1,5 @@
+{% set module_json = page.wire('modules').get('JsonDataFiles') %}
+
 <div class="row">
 	<div class="col-sm-6">
 		<table class="table table-striped table-bordered table-sm">
@@ -22,7 +24,7 @@
 </div>
 
 <div class="card-body">
-	<h3 class="text-center">Notes</h3>
+	<h4 class="text-center">Notes</h4>
 </div>
 <table class="table table-striped table-bordered table-sm">
 	<thead>
@@ -36,11 +38,13 @@
 	</thead>
 	<tbody>
 		{% for note in json['data']['notes'] %}
-			{% for key, column in json['columns']['notes'] %}
-				<td class="{{ module_json.get_justifyclass(column['datajustify']) }}">
-					{{ note[key] }}
-				</td>
-			{% endfor %}
+			<tr>
+				{% for key, column in json['columns']['notes'] %}
+					<td class="{{ module_json.get_justifyclass(column['datajustify']) }}">
+						{{ note[key] }}
+					</td>
+				{% endfor %}
+			</tr>
 		{% endfor %}
 	</tbody>
 </table>
