Update Ci\StandingOrders to use rid

--- a/site/templates/twig/customers/ci/.new/standing-orders/display.twig
+++ b/site/templates/twig/customers/ci/.new/standing-orders/display.twig
@@ -1,7 +1,7 @@
-{% extends 'customers/ci/display.twig' %}
+{% extends 'customers/ci/.new/display.twig' %}
 
 {% block body %}
-	{% include 'customers/ci/standing-orders/standing-orders.twig' %}
+	{% include 'customers/ci/.new/standing-orders/standing-orders.twig' %}
 {% endblock %}
 
 {% block footer %}
@@ -9,7 +9,7 @@
 		<div class="d-flex justify-content-between align-items-center">
 			<div></div>
 			<div></div>
-			<a href="{{ page.ciUrl(customer.id) }}" class="btn btn-warning btn-sm">
+			<a href="{{ page.ciUrl(customer.rid) }}" class="btn btn-warning btn-sm">
 				<i class="fa fa-times" aria-hidden="true"></i> Close
 			</a>
 		</div>
