Update Ci\Documents to use rid

--- a/site/templates/twig/customers/ci/.new/documents/list.twig
+++ b/site/templates/twig/customers/ci/.new/documents/list.twig
@@ -11,7 +11,7 @@
 			<tr id="doc-{{ document.filename }}">
 				<td>{{ document.title }}</td>
 				<td>
-					<a href="{{ page.documentUrl(list.custid, document.folder, document.filename) }}" class="link" target="_blank">
+					<a href="{{ page.documentUrl(input.get.int('rid'), document.folder, document.filename) }}" class="link" target="_blank">
 						{{ document.filename }}
 					</a>
 				</td>
