--- a/site/templates/twig/customers/ci/.new/documents/display.twig
+++ b/site/templates/twig/customers/ci/.new/documents/display.twig
@@ -1,4 +1,4 @@
-{% extends 'customers/ci/display.twig' %}
+{% extends 'customers/ci/.new/display.twig' %}
 
 {#
 	var                    Description / Instance of
@@ -22,7 +22,7 @@
 {% endblock %}
 
 {% block body %}
-	{% include 'customers/ci/documents/list.twig' %}
+	{% include 'customers/ci/.new/documents/list.twig' %}
 {% endblock %}
 
 {% block footer %}
@@ -30,7 +30,7 @@
 		<div class="d-flex justify-content-between align-items-center">
 			<div></div>
 			<div></div>
-			<a href="{{ page.ciUrl(customer.id) }}" class="btn btn-warning btn-sm">
+			<a href="{{ page.ciUrl(customer.rid) }}" class="btn btn-warning btn-sm">
 				<i class="fa fa-times" aria-hidden="true"></i> Close
 			</a>
 		</div>
