Add pricing twig

--- a/site/templates/twig/customers/ci/.new/pricing/display.twig
+++ b/site/templates/twig/customers/ci/.new/pricing/display.twig
@@ -1,7 +1,7 @@
 {% extends 'customers/ci/.new/display.twig' %}
 
 {% block body %}
-	{% include 'customers/ci/pricing/customer-item.twig' %}
+	{% include 'customers/ci/.new/pricing/pricing/customer-item.twig' %}
 
 	<div class="card-body">
 		<div class="row">
