TWIG: remove unused css classes

--- a/site/templates/twig/customers/ci/.new/open-invoices/open-invoices.twig
+++ b/site/templates/twig/customers/ci/.new/open-invoices/open-invoices.twig
@@ -1,6 +1,6 @@
 {% set module_formatter = formatter %}
 
-<table class="table table-sm table-striped table-bordered table-condensed table-excel" id="invoices">
+<table class="table table-striped table-bordered table-sm" id="invoices">
 	<thead>
 		{% include 'util/screen-formatter/tr-labels.twig' with {'section': 'detail'} %}
 	</thead>
