--- a/site/templates/twig/customers/ci/.new/payments/payments.twig
+++ b/site/templates/twig/customers/ci/.new/payments/payments.twig
@@ -1,6 +1,6 @@
 {% set module_formatter = formatter %}
 
-<table class='table table-sm table-striped table-bordered table-condensed table-excel' id='payments'>
+<table class='table table-striped table-bordered table-sm' id='payments'>
 	<thead>
 		{% include 'util/screen-formatter/tr-labels.twig' with {'section': 'detail'} %}
 	</thead>
