--- a/site/templates/twig/customers/ci/.new/sales-history/sales-history.twig
+++ b/site/templates/twig/customers/ci/.new/sales-history/sales-history.twig
@@ -17,7 +17,7 @@
 	</div>
 
 	<div class="collapse show" id="invoices-{{ index|attrJS }}">
-		<table class="table table-striped table-bordered table-sm table-excel">
+		<table class="table table-striped table-bordered table-sm">
 			<tbody>
 				{% for invoice in whse['orders'] %}
 					{% for x in 1..blueprint['header']['rowcount'] %}
