--- a/site/templates/twig/sales-orders/sales-order/header.twig
+++ b/site/templates/twig/sales-orders/sales-order/header.twig
@@ -1,4 +1,5 @@
-{% set config = page.wire('modules').get('ConfigureSo').config() %}
+{% set config = page.wire('modules').get('Dconfigs').config('so') %}
+
 <div class="row mt-4">
 	<div class="col-sm-4">
 		<legend class="font-weight-bold text-secondary">
