--- a/site/templates/twig/customers/ci/.new/display.twig
+++ b/site/templates/twig/customers/ci/.new/display.twig
@@ -6,11 +6,14 @@
 	{% block header %}
 		<div class="card-header bg-light">
 			<div class="row">
-				<div class="col-sm-3 col-md-1">
-					<strong>Cust ID:</strong>
+				<div class="col-4">
+					<strong>{{ customer.id|replace({' ': '&nbsp;'})|raw  }}</strong> -- {{ customer.name }}
 				</div>
-				<div class="col-sm-6">
-					{{ customer.id }} - {{ customer.name }}
+				<div class="col-4 text-center">
+					{{ page.subfunctionDesc }}
+				</div>
+				<div class="col-4 text-right">
+					{{ input.get.text('date') }}
 				</div>
 			</div>
 		</div>
@@ -19,11 +22,6 @@
 	{% block links %}
 		<div class="p-2 px-3 card-toolbar">
 			<div class="row">
-				<div class="col-4 col-sm-3">
-					<a href="{{ page.ciUrl(customer.rid) }}" class="btn btn-primary {{ page.is_print() ? 'd-print-none' : ''}}">
-						<i class="fa fa-undo" aria-hidden="true"></i> {{ customer.id }}
-					</a>
-				</div>
 				<div class="col-4 col-sm-3">
 					{% if page.is_print() == false %}
 						<a href="{{ page.get_printURL() }}" class="btn btn-primary">
@@ -37,6 +35,9 @@
 							<i class="fa fa-refresh" aria-hidden="true"></i> Refresh
 						</a>
 					{% endif %}
+				</div>
+				<div class="col-4 col-sm-3">
+					
 				</div>
 				<div class="col-sm-3 text-center pt-2">
 					{% if page.has('lastmodified') %}
