--- a/site/templates/twig/code-tables/mar/mtm/form.twig
+++ b/site/templates/twig/code-tables/mar/mtm/form.twig
@@ -16,7 +16,7 @@
 			<div class="col-sm-4 form-group">
 				{% include 'code-tables/mar/mtm/form/percent.twig' %}
 			</div>
-			<div class="col-sm-4">
+			<div class="col-sm-4 form-group">
 				{% include 'code-tables/mar/mtm/form/tax-type.twig' %}
 			</div>
 			<div class="col-sm-4 form-group">
