--- a/site/templates/twig/items/cxm/new-cxm-modal.twig
+++ b/site/templates/twig/items/cxm/new-cxm-modal.twig
@@ -27,7 +27,7 @@
 										'colorclass': 'btn-secondary',
 										'text': 'fa fa-search'|icon,
 										'attributes': {
-											'title': 'Search Customer IDs',
+											'title': 'Search Customers',
 											'data-toggle': 'modal',
 											'data-target': '#ajax-modal',
 											'data-lookupurl': page.search_lookupURL('customers'),
