--- a/site/templates/twig/code-tables/mar/mtm/form/freight-tax-code.twig
+++ b/site/templates/twig/code-tables/mar/mtm/form/freight-tax-code.twig
@@ -16,7 +16,7 @@
 				'colorclass': 'btn-secondary',
 				'text': 'fa fa-search'|icon,
 				'attributes': {
-					'title': 'Search freight Tax Code',
+					'title': 'Search Tax Codes',
 					'data-toggle': 'modal',
 					'data-target': '#ajax-modal',
 					'data-lookupurl': page.searchLookupUrl('mar/mtm/'),
