--- a/site/templates/twig/items/vxm/list/xref/js.twig
+++ b/site/templates/twig/items/vxm/list/xref/js.twig
@@ -39,7 +39,7 @@ $(function() {
 		var action = form.attr('action');
 		var search = form.find('input[name=q]').val();
 		var url = action + '?' + query;
-		form.closest('.modal').find('.modal-title').text('Searching for ' + search);
+		{# form.closest('.modal').find('.modal-title').text('Searching for ' + search); #}
 		form.closest('.modal').find('.modal-body').loadin(url, function() {});
 	});
 
