--- a/site/templates/twig/mar/armain/pty3/customer-accounts/.js.twig
+++ b/site/templates/twig/mar/armain/pty3/customer-accounts/.js.twig
@@ -102,11 +102,11 @@ $(function() {
 		var input = $(this);
 		var code = input.val();
 
-		server.getStateCode(code, function(state) {
-			if (state) {
-				input.closest('.form-group').find('.description').text(state.name);
-			}
-		});
+		// server.getStateCode(code, function(state) {
+		// 	if (state) {
+		// 		input.closest('.form-group').find('.description').text(state.name);
+		// 	}
+		// });
 	});
 
 	$("body").on("change", "select[name=international]", function(e) {
@@ -123,48 +123,6 @@ $(function() {
 		}
 	});
 
-/* =============================================================
-	Lookup Modal Functions
-============================================================= */
-	ajaxModal.on('show.bs.modal', function (event) {
-		var button = $(event.relatedTarget); // Button that triggered the modal
-		var modal = $(this);
-		modal.attr('data-input', button.data('input'));
-
-		modal.find('.modal-title').text(button.attr('title'));
-		modal.resizeModal('xl');
-		modal.find('.modal-body').loadin(button.data('lookupurl'), function() {});
-	});
-
-	$("body").on('click', '.code-link', function(e) {
-		e.preventDefault();
-		var button = $(this);
-		var modal  = button.closest('.modal');
-		var input  = $(modal.attr('data-input'));
-		input.val(button.data('code'));
-		if (input.data('jqv')) {
-			input.change();
-		}
-		modal.modal('hide');
-	});
-
-	$("body").on('submit', '#ajax-modal form', function(e) {
-		e.preventDefault();
-		var form = $(this);
-		var query = form.serialize();
-		var action = form.attr('action');
-		var search = form.find('input[name=q]').val();
-		var url = action + '?' + query;
-		form.closest('.modal').find('.modal-title').text('Searching for ' + search);
-		form.closest('.modal').find('.modal-body').loadin(url, function() {});
-	});
-
-	$("body").on('click', '#ajax-modal .paginator-link', function(e) {
-		e.preventDefault();
-		var button = $(this);
-		var modal  = button.closest('.modal');
-		modal.find('.modal-body').load(button.attr('href'));
-	});
 
 /* =============================================================
 	Validation Functions
